7 files modified, 4 added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-top-bar></app-top-bar>
+<app-top-bar style="background-color: #AB4DDA;"></app-top-bar>
 
 <div class="container">
   <router-outlet></router-outlet>
